--- a/izumi-env/Dockerfile
+++ b/izumi-env/Dockerfile
@@ -24,14 +24,14 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E03280
     echo "deb https://dl.bintray.com/sbt/debian /" | tee /etc/apt/sources.list.d/sbt.list
 
 RUN apt-get update && \
-    apt-get install -y openjdk-8-jdk
+    apt-get install -y openjdk-8-jdk git mono-devel nuget nunit-console npm golang-${V_GOLANG}
 
 RUN wget -q www.scala-lang.org/files/archive/scala-${V_SCALA}.deb && dpkg -i scala-${V_SCALA}.deb && rm -rf *.deb && \
     npm i -g typescript@${V_TYPESCRIPT} && \
     wget -q -O /usr/local/bin/coursier https://git.io/vgvpD && chmod +x /usr/local/bin/coursier
 
 RUN apt-get update && \
-    apt-get install -y git sbt mono-devel nuget nunit-console npm golang-${V_GOLANG} && \
+    apt-get install -y sbt && \
     apt-get clean -y
 
 #  /usr/lib/go-1.10/bin needs to be added into PATH manually: https://github.com/golang/go/wiki/Ubuntu
