--- a/izumi-env/Dockerfile
+++ b/izumi-env/Dockerfile
@@ -1,9 +1,10 @@
 ARG V_UBUNTU=18.04
 FROM ubuntu:${V_UBUNTU}
 
-ARG V_SCALA=2.12.6
+ARG V_SCALA=2.12.7
 ARG V_TYPESCRIPT=2.9.2
 ARG V_GOLANG=1.10
+ARG V_OPENJDK=11
 
 RUN mkdir -p /work
 RUN mkdir -p /root
@@ -24,7 +25,7 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E03280
     echo "deb https://dl.bintray.com/sbt/debian /" | tee /etc/apt/sources.list.d/sbt.list
 
 RUN apt-get update && \
-    apt-get install -y openjdk-8-jdk git mono-devel nuget nunit-console npm golang-${V_GOLANG}
+    apt-get install -y openjdk-${V_OPENJDK}-jdk git mono-devel nuget nunit-console npm golang-${V_GOLANG}
 
 RUN wget -q www.scala-lang.org/files/archive/scala-${V_SCALA}.deb && dpkg -i scala-${V_SCALA}.deb && rm -rf *.deb && \
     npm i -g typescript@${V_TYPESCRIPT} && \
