--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ jobs:
       - docker push septimalmind/izumi-env:latest
       - docker push septimalmind/izumi-env:${TRAVIS_BRANCH}
       - docker push septimalmind/izumi-env:${TRAVIS_COMMIT}
-      - if [[ ! -z "$TRAVIS_TAG" ]] ; then docker push septimalmind/izumi-env:${TRAVIS_TAG} fi
+      - if [[ ! -z "$TRAVIS_TAG" ]] ; then docker push septimalmind/izumi-env:${TRAVIS_TAG} ; fi
     - stage: "ubuntu 14.04"
       script:
       - docker build --squash --tag septimalmind/izumi-env-legacy:latest --tag septimalmind/izumi-env-legacy:${TRAVIS_BRANCH} --tag septimalmind/izumi-env-legacy:${TRAVIS_COMMIT} izumi-env-legacy
       - docker push septimalmind/izumi-env-legacy:latest
       - docker push septimalmind/izumi-env-legacy:${TRAVIS_BRANCH}
       - docker push septimalmind/izumi-env-legacy:${TRAVIS_COMMIT}
-      - if [[ ! -z "$TRAVIS_TAG" ]] ; then docker push septimalmind/izumi-env-legacy:${TRAVIS_TAG} fi
+      - if [[ ! -z "$TRAVIS_TAG" ]] ; then docker push septimalmind/izumi-env-legacy:${TRAVIS_TAG} ; fi
