--- a/izumi-env/Dockerfile
+++ b/izumi-env/Dockerfile
@@ -36,9 +36,7 @@ RUN apt-get update && \
     apt-get install -y ruby ruby-dev && \
     apt-get clean -y
 
-RUN gem install rvm && \
-  rvm use 2.2.8 --install --fuzzy && \
-  gem update --system && \
+RUN gem update --system && \
   gem install sass && \
   gem install jekyll -v 3.2.1
 
