--- a/izumi-env/Dockerfile
+++ b/izumi-env/Dockerfile
@@ -17,7 +17,7 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN echo "APT::Acquire::Queue-Mode "access"; APT::Acquire::Retries 3; " > /etc/apt/apt.conf.d/99parallel && \
   export DEBIAN_FRONTEND=noninteractive && \
-  apt-get update && apt-get install -y --no-install-recommends tzdata gnupg ca-certificates wget curl unzip apt-utils && \
+  apt-get update && apt-get install -y --no-install-recommends tzdata gnupg ca-certificates wget curl unzip apt-utils build-essential git && \
   ln -fs /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
   dpkg-reconfigure --frontend noninteractive tzdata && \
   apt-get clean -y
@@ -30,22 +30,24 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E03280
   echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
   curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - && \
   echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
-  echo "deb [arch=amd64] https://download.docker.com/linux/ubuntu ${URELEASE} stable" | tee /etc/apt/sources.list.d/docker.list
+  echo "deb [arch=amd64] https://download.docker.com/linux/ubuntu ${URELEASE} stable" | tee /etc/apt/sources.list.d/docker.list && \
+  apt-get update
 
-RUN apt-get update && \
-  apt-get install -y --no-install-recommends openjdk-${V_OPENJDK}-jdk git mono-devel nuget nunit-console npm yarn docker-ce golang-${V_GOLANG}
+RUN apt-get install -y --no-install-recommends openjdk-${V_OPENJDK}-jdk \
+  mono-devel nuget nunit-console \
+  npm yarn \
+  golang-${V_GOLANG} \
+  docker-ce
 
 RUN wget -q www.scala-lang.org/files/archive/scala-${V_SCALA}.deb && dpkg -i scala-${V_SCALA}.deb && rm -rf *.deb && \
   npm i -g typescript@${V_TYPESCRIPT} && \
   wget -q -O /usr/local/bin/coursier https://git.io/vgvpD && chmod +x /usr/local/bin/coursier
 
-RUN apt-get update && \
-  apt-get install -y --no-install-recommends sbt && \
-  apt-get install -y ruby ruby-dev && \
+RUN apt-get install -y --no-install-recommends sbt && \
+  apt-get install --no-install-recommends -y ruby ruby-dev && \
   apt-get clean -y
 
-RUN rvm use 2.2.8 --install --fuzzy && \
-  gem update --system && \
+RUN gem update --system && \
   gem install sass && \
   gem install jekyll -v 3.2.1
 
@@ -53,11 +55,12 @@ RUN rvm use 2.2.8 --install --fuzzy && \
 ENV GOPATH $HOME/gopath
 ENV PATH $HOME/gopath/bin:/usr/lib/go-${V_GOLANG}/bin:$PATH
 
-RUN java -version && \
-  scalac -version && \
-  csc -version && \
-  tsc -version && \
-  go version && \
-  sbt about && \
-  npm -v && \
-  yarn -v
+RUN echo "java: $(java -version)" && \
+  echo "scalac: $(scalac -version)" && \
+  echo "csc: $(csc -version)" && \
+  echo "tsc: $(tsc -version)" && \
+  echo "go: $(go version)" && \
+  echo "npm: $(npm -v)" && \
+  echo "yarn: $(yarn -v)" && \
+  echo "jekyll: $(jekyll -v)" && \
+  sbt about
