--- a/izumi-env/Dockerfile
+++ b/izumi-env/Dockerfile
@@ -48,7 +48,7 @@ RUN apt-get install -y --no-install-recommends openjdk-${V_OPENJDK}-jdk \
 
 RUN wget -q www.scala-lang.org/files/archive/scala-${V_SCALA}.deb && dpkg -i scala-${V_SCALA}.deb && rm -rf *.deb && \
   npm i -g typescript@${V_TYPESCRIPT} && \
-  wget -q -O /usr/local/bin/coursier https://git.io/vgvpD && chmod +x /usr/local/bin/coursier && \
+  curl -Lo /usr/local/bin/coursier https://git.io/coursier-cli && chmod +x /usr/local/bin/coursier && \
   pip install awscli
 
 RUN apt-get install -y --no-install-recommends sbt ant && \
