sbt 1.3.3: https://github.com/sbt/sbt/issues/5323

--- a/izumi-env/Dockerfile
+++ b/izumi-env/Dockerfile
@@ -6,6 +6,7 @@ ARG V_TYPESCRIPT=3.2.2
 ARG V_GOLANG=1.11
 ARG V_DOTNETSDK=2.2
 ARG V_OPENJDK=11
+ARG V_SBT=1.3.3
 ARG URELEASE=bionic
 
 RUN mkdir -p /work
@@ -52,7 +53,7 @@ RUN wget -q www.scala-lang.org/files/archive/scala-${V_SCALA}.deb && dpkg -i sca
   curl -Lo /usr/local/bin/coursier https://git.io/coursier-cli && chmod +x /usr/local/bin/coursier && \
   pip install awscli
 
-RUN apt-get install -y --no-install-recommends sbt ant && \
+RUN apt-get install -y --no-install-recommends sbt=${V_SBT} ant && \
   apt-get install --no-install-recommends -y ruby ruby-dev && \
   apt-get clean -y
 
