--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,7 +13,10 @@ jobs:
     - name: Build the Docker image
       run: |
         env
+        echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
+        sudo service docker restart        
         docker build --squash --tag septimalmind/izumi-env:latest --tag septimalmind/izumi-env:${TRAVIS_BRANCH} --tag septimalmind/izumi-env:${TRAVIS_COMMIT} izumi-env
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin        
         docker push septimalmind/izumi-env:latest
         docker push septimalmind/izumi-env:${TRAVIS_BRANCH}
         docker push septimalmind/izumi-env:${TRAVIS_COMMIT}
