--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,7 +11,7 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
     - uses: actions/checkout@v2
-    - uses: rlespinasse/github-slug-action@master
+    - uses: rlespinasse/github-slug-action@2.0.0
     - name: Print slug variables
       run: |
         echo ${{ env.GITHUB_REF_SLUG }}
