--- a/izumi-env/Dockerfile
+++ b/izumi-env/Dockerfile
@@ -40,8 +40,11 @@ RUN curl -sS https://download.mono-project.com/repo/xamarin.gpg | apt-key add - 
   curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add - && \
   echo "deb [arch=amd64] https://apt.releases.hashicorp.com ${URELEASE} main"| tee /etc/apt/sources.list.d/terraform.list   && \
   apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823 && \
-  echo "deb https://dl.bintray.com/sbt/debian /" | tee /etc/apt/sources.list.d/sbt.list && \
-  curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
+  # echo "deb https://dl.bintray.com/sbt/debian /" | tee /etc/apt/sources.list.d/sbt.list && \
+  # curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
+  echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | tee /etc/apt/sources.list.d/sbt.list && \
+  echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | tee /etc/apt/sources.list.d/sbt_old.list && \
+  curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | apt-key add && \
   apt-get update
 
 RUN apt-get upgrade -y
