--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,7 +6,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    env: 
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
@@ -18,14 +19,14 @@ jobs:
         echo ${{ env.GITHUB_HEAD_REF_SLUG }}
         echo ${{ env.GITHUB_BASE_REF_SLUG }}
     - name: Set env
-      run: echo ::set-env name=BRANCH_TAG::$(git describe --contains | grep v | grep -v '~' | head -n 1 || true)        
+      run: echo ::set-env name=BRANCH_TAG::$(git describe --contains | grep v | grep -v '~' | head -n 1 || true)
     - name: Build the Docker image
       run: |
         env
         echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
-        sudo service docker restart        
+        sudo service docker restart
         docker build --squash --tag septimalmind/izumi-env:latest --tag septimalmind/izumi-env:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env:${GITHUB_SHA} izumi-env
-        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin        
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker push septimalmind/izumi-env:latest
         docker push septimalmind/izumi-env:${GITHUB_REF_SLUG}
         docker push septimalmind/izumi-env:${GITHUB_SHA}
