--- a/izumi-env-light/Dockerfile
+++ b/izumi-env-light/Dockerfile
@@ -15,6 +15,13 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV JAVA_HOME ${JAVA_BASE}/graalvm
 ENV PATH "$PATH:$JAVA_HOME/bin:/app:/root/.dotnet/tools"
 
+RUN apt-get -y install locales
+RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
+  locale-gen
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
+
 RUN echo "APT::Acquire::Queue-Mode "access"; APT::Acquire::Retries 3; " > /etc/apt/apt.conf.d/99parallel && \
   export DEBIAN_FRONTEND=noninteractive && \
   apt-get update && apt-get install -y --no-install-recommends tzdata gnupg ca-certificates wget curl zip unzip apt-utils jq openssh-client software-properties-common && \
