--- a/izumi-env-build/Dockerfile
+++ b/izumi-env-build/Dockerfile
@@ -1,10 +1,9 @@
 ARG V_UBUNTU=22.04
 FROM ubuntu:${V_UBUNTU}
-
 ARG URELEASE=jammy
 
-#ARG V_OPENJDK=11
-ARG V_GRAAL=21.0.1
+###
+ARG V_GRAAL=21.0.2
 ARG V_SCALA=2.13.12
 ARG V_SBT=1.9.8
 
@@ -14,7 +13,9 @@ ARG V_DOTNETSDK=7.0
 ARG V_MVN=3.6.3-5
 ARG V_PROTOBUF=25.1
 ARG V_JEKYLL=3.2.1
+###
 
+# basic configuration
 RUN mkdir -p /work
 RUN mkdir -p /root
 VOLUME /work
@@ -22,28 +23,29 @@ VOLUME /root
 WORKDIR /work
 
 ENV DEBIAN_FRONTEND noninteractive
-
-RUN echo "APT::Acquire::Queue-Mode "access"; APT::Acquire::Retries 3; " > /etc/apt/apt.conf.d/99parallel && \
-  export DEBIAN_FRONTEND=noninteractive && \
-  apt-get update && apt-get install -y --no-install-recommends tzdata gnupg ca-certificates wget curl zip unzip apt-utils jq build-essential git openssh-client software-properties-common locales && \
-  ln -fs /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
-  dpkg-reconfigure --frontend noninteractive tzdata && \
-  apt-get clean -y
-
-RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
-  locale-gen
+RUN echo "APT::Acquire::Queue-Mode "access"; APT::Acquire::Retries 3; " > /etc/apt/apt.conf.d/99parallel
 
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
 
+RUN apt-get update && apt-get upgrade -y
+RUN apt-get install -y --no-install-recommends tzdata gnupg ca-certificates wget curl zip unzip apt-utils jq openssh-client software-properties-common
+
+RUN apt-get -y --no-install-recommends install locales
+RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
+  locale-gen
+
+RUN ln -fs /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
+  dpkg-reconfigure --frontend noninteractive tzdata
+# end: basic configuration
+
+# sources
 RUN curl -o packages-microsoft-prod.deb https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/packages-microsoft-prod.deb && \
   dpkg -i packages-microsoft-prod.deb && \
   rm packages-microsoft-prod.deb
 
 RUN add-apt-repository ppa:longsleep/golang-backports
-
-
 
 RUN curl -sS https://download.mono-project.com/repo/xamarin.gpg | apt-key add - && \
   echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | tee /etc/apt/sources.list.d/mono-official-stable.list
@@ -65,6 +67,8 @@ RUN curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E4
   echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | tee /etc/apt/sources.list.d/sbt_old.list
 
 RUN apt-get update && apt-get upgrade -y
+# end: sources
+
 
 # we don't need it but it fixes broken apt
 #RUN apt-get install -y openjdk-21-jre-headless
@@ -92,14 +96,11 @@ RUN apt-get install -y --no-install-recommends \
 RUN apt-get install -y --no-install-recommends \
   maven=${V_MVN}
 
-#ant
-#openjdk-${V_OPENJDK}-jdk
 
 RUN apt-get install -y --no-install-recommends \
   ruby ruby-dev
 
-RUN apt-get clean -y
-
+# java
 ARG JAVA_BASE=/usr/lib/jvm
 ENV JAVA_HOME ${JAVA_BASE}/graalvm
 ENV PATH "$PATH:$JAVA_HOME/bin"
@@ -112,6 +113,7 @@ RUN cd /tmp && \
   chmod -R 755 ${JAVA_BASE} && \
   mv graalvm-*/ ${JAVA_HOME} && \
   update-alternatives --install /usr/bin/java java $JAVA_HOME/bin/java 99999
+# end: java
 
 RUN wget -q www.scala-lang.org/files/archive/scala-${V_SCALA}.deb && dpkg -i --ignore-depends=java8-runtime-headless scala-${V_SCALA}.deb  && rm -rf *.deb && \
   curl -Lo /usr/local/bin/coursier https://git.io/coursier-cli && chmod +x /usr/local/bin/coursier
@@ -146,3 +148,5 @@ RUN echo "java: $(java -version)" && \
 ENV PB_REL="https://github.com/protocolbuffers/protobuf/releases"
 RUN curl -LO $PB_REL/download/v${V_PROTOBUF}/protoc-${V_PROTOBUF}-linux-x86_64.zip && unzip protoc-${V_PROTOBUF}-linux-x86_64.zip -d /usr/proto
 RUN mv /usr/proto/bin/protoc /usr/bin/protoc && mv /usr/proto/include /usr/bin/include && chmod +x /usr/bin/protoc
+
+RUN apt-get clean -y
