--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,12 +25,12 @@ jobs:
         env
         echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
         sudo service docker restart
-        docker build --squash --tag septimalmind/izumi-env:latest --tag septimalmind/izumi-env:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env:${GITHUB_SHA} izumi-env
+        docker build --squash --tag septimalmind/izumi-env:latest --tag septimalmind/izumi-env:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env:${GITHUB_SHA} izumi-env-build
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker push septimalmind/izumi-env:latest
         docker push septimalmind/izumi-env:${GITHUB_REF_SLUG}
         docker push septimalmind/izumi-env:${GITHUB_SHA}
-        if [[ ! -z "$BRANCH_TAG" ]] ; then docker push septimalmind/izumi-env:${BRANCH_TAGYt} ; fi
+        if [[ ! -z "$BRANCH_TAG" ]] ; then docker push septimalmind/izumi-env:${BRANCH_TAG} ; fi
 
   build-light:
     runs-on: ubuntu-latest
@@ -53,9 +53,9 @@ jobs:
         env
         echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
         sudo service docker restart
-        docker build --squash --tag septimalmind/izumi-env-light:latest --tag septimalmind/izumi-env-light:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env-light:${GITHUB_SHA} izumi-env-light
+        docker build --squash --tag septimalmind/izumi-env-light:latest --tag septimalmind/izumi-env-light:${GITHUB_REF_SLUG} --tag septimalmind/izumi-env-light:${GITHUB_SHA} izumi-env-runtime
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker push septimalmind/izumi-env-light:latest
         docker push septimalmind/izumi-env-light:${GITHUB_REF_SLUG}
         docker push septimalmind/izumi-env-light:${GITHUB_SHA}
-        if [[ ! -z "$BRANCH_TAG" ]] ; then docker push septimalmind/izumi-env-light:${BRANCH_TAGYt} ; fi
+        if [[ ! -z "$BRANCH_TAG" ]] ; then docker push septimalmind/izumi-env-light:${BRANCH_TAG} ; fi
